--- a/index.html
+++ b/index.html
@@ -60,14 +60,23 @@
         placeholder="Enter Message"
       ></textarea>
 
-      <!-- Add a checkbox input with the id set to 'checkbox' --> 
-      <input
-        type="checkbox"
-        id="checkbox"
-      />Sign me up for email about exclusive offers
+      <!-- Add a checkbox input with the id set to 'checkbox' -->
+      <input type="checkbox" id="checkbox" />Sign me up for email about
+      exclusive offers
 
       <!-- Add an input with the type set to 'submit' -->
       <input type="submit" value="Submit" />
+
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3454.339099810148!2d-51.20294094877226!3d-30.027127981799747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951979b57112987b%3A0x4df4b09c004aa2b0!2sParque%20Moinhos%20de%20Vento%20(Parc%C3%A3o)!5e0!3m2!1sen!2sau!4v1665379913676!5m2!1sen!2sau"
+        width="100%"
+        height="400px"
+        style="border: 1"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+        frameborder="1"
+      ></iframe>
     </form>
   </body>
 </html>
